...
@end

@implementation ViewController

- (void)viewDidLoad {
    [super viewDidLoad];
    self.title = @"Home";
    [self setupUI];
    
    UIButton *btn = [UIButton new];
    btn.tag = 5;
//    [self clickBtn:btn];
}

- (void)setupUI {
    NSArray *nameArr = @[@"Kiwi示例", @"UITestDemo", @"UI Recording", @"Accessibility Demo", @"KIFUnitTest", @"Test Plan Demo"];
    CGFloat btnW = self.view.frame.size.width * 0.6;
    CGFloat btnX = (self.view.frame.size.width - btnW) / 2;
    CGFloat btnH = 44;
    CGFloat btnY = 0;
    CGFloat statusH = [UIApplication sharedApplication].statusBarFrame.size.height;
    CGFloat navH = self.navigationController.navigationBar.frame.size.height;
...
